style/index.css
body {
	margin: 0;
	background: linear-gradient(-45deg, #17eb76, #0be683, #4fe3b9, #8cd5ff, #d380ff, #f7a3f6);
	background-size: 400% 400%;
	animation: gradient 15s ease infinite;
	font-family: 'Nova Mono', monospace;
}
/*NAVBAR & FOOTER*/
#navBar {
	z-index: 9999;
}
.topnav {
	position: relative;
	overflow: hidden;
	background: rgba(87, 18, 199, 0.90);
}
.topnav a img {height: 40px; }
.topnav a{ 
	float: left;
	color: rgb(38, 21, 66);
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
	font-size: 25px;
}
.topnav a:hover, .topnav #darkMode:hover{ 
	background-color: rgb(206, 190, 232);
	color: black;
	cursor: pointer;
}
.topnav a.active { 
	opacity: 0.8;
	background: linear-gradient(-45deg, #17eb76, #0be683, #4fe3b9, #8cd5ff, #d380ff, #f7a3f6);
	background-size: 400% 400%;	
	animation: gradient 5s ease infinite;
	color: black;
}
.topnav-centered a {
	float: none;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}
.topnav-centered a:hover img {transform: rotateY(360deg);}
.topnav-centered a img {transition: transform 1.0s;}
.topnav-right { float: right;}
.footer {
	background-color: rgb(255, 197, 185);
	background-image: url(../img/logo100px.png);
  	color: #fff;
	font-size: 150%;
	text-align: center;
}
.footer .quick-links {
	padding: 1rem;
	background: rgba(0, 0, 0, 0.8);
}
.footer p {
	font-size: 40%;
	margin: 0;
	padding-bottom: 0.4rem;
}
.footer .quicks {
	padding: 0;
	margin: 0;
	list-style: none;
	display: block;
}
.footer .quicks a{
	text-decoration: none;
	color: #ffebf6;
}
.footer .quicks li {font-size: 60%;}
.footer .socials-list {
	margin: 10px; 
	padding: 0;
}
.footer .socials-list li {
	display: inline;
	margin: 0 1rem;
}
.footer .socials-list li:hover, .footer .quicks li:hover {font-size: 120%;}
.footer .socials-list .facebook a {color: #3b5998;} 
.footer .socials-list .instagram a { color: #e1306c;}
.footer .socials-list .youtube a {color: #FF0000;}
.footer .socials-list .github a { color: #4078c0;}
.footer .socials-list .twitch a {color: #9147fe;}
.footer .socials-list .hat a {color: gray;}
/*END NAVBAR & FOOTER*/
.main-wrapper { 
	display: grid;
	grid-template-columns: repeat(4, [col] auto ); 
	grid-gap: 10px;
	color: #444;
	max-width: 1500px;
	padding: 3rem;
	margin: 0 auto;
}
.box { 
	border-radius: 5px;
	font-size: 150%;
}
.box .box { 
	padding: 1rem;
	border-radius: 5px;
}
/*FIRST ELEMENT OF THE GRID*/
.intro-box { 
	padding: 1rem;
	grid-column: 1 / 3;
	grid-row: 1;
}
.intro-box h1, h5, h6, p {margin: 10px;}
.intro-box p {
	text-align: left;
}
/*SECOND ELEMENT(S) OF THE GRID*/
.author-box {
	min-width: 15vw;
	max-width: 20vw;
	padding: 1rem;
 	background: #262626;
 	color: #c8d2f0;
	grid-column: 4 / 5;
	grid-row: 1;
}
.author-box a {
	float: right;
	color: white;
}
.author-box a:hover {color: #79838f;}
.author-box content h5, p{ 
	margin: 0;
}
.author-box-reduced {display: none;}
/*THIRD ELEMENT OF THE GRID & NESTED GRID CONTAINER*/
.content-wrapper {
	padding: 1rem 1rem;
	background: white;
	grid-column: 1 / 5;
	grid-row: 2;
	display: grid;
	grid-template-columns: repeat(2, [col] 50% );
	grid-gap: 2px;
}
/*FIRST ELEMENT OF THE NESTED GRID*/
.contents-box {
	font-size: 100%;
	margin: auto;
	grid-column: 1 / 2;
	grid-row: 1;
}
.contents-box h2, p {margin: 0;}
.contents-box ul {
	list-style: none;
	display: inline-block;
}
.contents-box a {
	color: #c8d2f0;
	text-decoration: none;
}
.contents-box a:hover {
	color: #3c5fd2;
	font-size: 110%;
}
.contents-box .contents-container {
	background: rgba(255, 140, 0, 0.2);
	padding: 2.5rem;
	border-radius: 5%;
	max-height: 500px;
}
/*SECOND ELEMENT OF THE NESTED GRID*/
.donation-box {
	grid-column: 2 / 3;
	grid-row: 1;
}
.donation-box h1, h2, p {
	text-align: center;
	margin: 0.5rem;
}
.donation-box p {font-size: 70%;}
.donation-box #payPal a{color: #0079C1;}
.collapsible {
	background: none;
	color: #3c5fd2;
	cursor: pointer;
	padding: 18px;
	width: 100%;
	border: none;
	border-radius: 10px;
	text-align: left;
	font-size: 100%;
	font-family: 'Nova Mono', monospace;
}
.active-collapsible, .collapsible:hover {background: #dbdbdb;}
.collapsible-content {
  	display: none;
  	overflow: hidden;
  	text-align: center;
}
.collapsible-content a {
	text-decoration: none;
}
.collapsible-content a:hover {
	color: blue;
}
/*THIRD ELEMENT OF THE NESTED GRID*/
.boring-posts-box{
	grid-column: 1 / 2;
	grid-row: 2;
}
/*FORTH ELEMENT OF THE NESTED GRID*/
.boring-games-box {
	grid-column: 2 / 3;
	grid-row: 2;
}
/*FIFTH ELEMENT OF THE NESTED GRID*/
.creative-games-box {
	grid-column: 1 / 2;
	grid-row: 3;
}
/*ELEMENT SIX OF THE NESTED GRID*/
.useless-box {
	grid-column: 2 / 3;
	grid-row: 3;
}
/*ELEMENT SEVEN OF THE NESTED GRID*/
.frustration-box {
	grid-column: 1 / 3;
	grid-row: 4;	
}
/*FORTH ELEMENT OF THE GRID*/
.compilation-box {
	border: 5px solid transparent;
	border-radius: 0.5em;
	background-image: linear-gradient(#ededf2, #ededf2), linear-gradient(to right, #0e8242, #1d573d, #125442, #4c7a6d, #7521a6, #ba25b7);
	background-origin: border-box;
	background-clip: content-box, border-box;
	grid-column: 1 / 5;
	grid-row: 3;
}
.compilation-container {text-align: center;}
.compilation-container a {text-decoration: none;}
.compilation-container a:hover section {
	transform: scale(1.1);
	transition: 1s;
	opacity: 75%;
	animation: shake 1.5s ease-in-out 1.0s infinite;
}
.compilation-container .compilation-creative-game  .flip-card, .compilation-container .compilation-useless-game  .flip-card, .compilation-container .compilation-boring-game  .flip-card{
	width: 100%;
	min-height: 500px;
	perspective: 1000px;
}
.compilation-container .compilation-creative-game  .flip-card:hover {
	min-height: 800px;
}
/* ... */

